# graphics_engine_glfw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SHADER.h  main.cpp
includes/: CMakeLists.txt
includes/glad/: CMakeLists.txt
includes/glad/src/: glad.c
includes/stb/: CMakeLists.txt
includes/stb/include/: stb_image.h
includes/stb/src/: stb_image.cpp
resources/: level.txt
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  SHADER.h  level_editor.cpp  level_editor.h  main.cpp  stb_image.cpp  stb_image.h  std_image.h
src/headers/: SHADER.h
src/includes/: CAMERA.h  INPUT.h  MATERIAL.h  SHADER.h
src/shaders/: vertex_shader.glsl
src/shaders/lit/: diffuse_lit_fragment.glsl  diffuse_lit_vertex.glsl  fragment_color_lit.glsl  fragment_lit.glsl  lighting_fragment.glsl  lighting_vertex.glsl  vertex_color_lit.glsl
